@@ -7,6 +7,8 @@ Version 0.12
 Unreleased.
 
 - Spit out big deprecation warnings for werkzeug.script
+- Use `inspect.getfullargspec` internally when available as
+  `inspect.getargspec` is gone in 3.6
 
 Version 0.11.3
 --------------
